<resources>
    <string name="About">About</string>
    <string name="Activated">Activated</string>
    <string name="ActivatedDetail">EdXposed is activated</string>
    <string name="Apps">Apps</string>
    <string name="Downloads">Downloads</string>
    <string name="Inactivate">Inactivate</string>
    <string name="Install">Install</string>
    <string name="InstallDetail">Tap to install EdXposed</string>
    <string name="Logs">Logs</string>
    <string name="ModuleUpgradable">%s modules can be upgraded</string>
    <string name="ModuleUptodate">All modules are up-to-date</string>
    <string name="Modules">Modules</string>
    <string name="ModulesDetail">%d modules enabled</string>
    <string name="Settings">Settings</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_developers_label">Main developers</string>
    <string name="about_libraries_label">Used libraries</string>
    <string name="about_source">https://github.com/ElderDrivers/EdXposedManager/</string>
    <string name="about_source_label">Source code</string>
    <string name="about_support">http://edxp.meowcat.org/faq</string>
    <string name="about_translator_label">Translator</string>
    <string name="about_version_label">Version</string>
    <string name="action_settings">Settings</string>
    <string name="activate_and_reboot">Activate and reboot</string>
    <string name="activate_only">Activate only</string>
    <string name="add_package_failed">Failed to edit, one or more settings prevent you from editing.</string>
    <string name="alt_download_method">Alternative download method</string>
    <string name="alt_download_method_summ">Check this option if you get issues when downloading a module</string>
    <string name="android_sdk">Android %2$s (%1$s, API %3$d)</string>
    <string name="app_launch">Launch it</string>
    <string name="app_name">EdXposed Manager</string>
    <string name="app_stop">Stop it</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="areyousure">Are you sure?</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cache_cleaned">"App's cache has been cleaned. Restart is needed"</string>
    <string name="changelog">Changelog</string>
    <string name="changes">Changelog:</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="compile_failed">Optimization failed or return value is empty</string>
    <string name="compile_reset_msg">Resetting …</string>
    <string name="compile_speed_msg">Optimizing …</string>
    <string name="confirm_reboots">Confirm reboots</string>
    <string name="coolapk">CoolApk</string>
    <string name="copy">Copy</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="custom_list">Use mirrored modules list</string>
    <string name="custom_list_summ">"Mirrored modules list can help load faster
But the newly submitted module display will be delayed (about 24 hours)"</string>
    <string name="dexopt_now">Optimize all apps with Dexopt</string>
    <string name="done">Done!</string>
    <string name="dont_show_again">"Don't show this again"</string>
    <string name="download_author">by %s</string>
    <string name="download_could_not_read_file">Could not read downloaded file: %s</string>
    <string name="download_details_not_found">There is no module with package name \"%s\" in the repository</string>
    <string name="download_details_page_description">Description</string>
    <string name="download_details_page_settings">Settings</string>
    <string name="download_details_page_versions">Versions</string>
    <string name="download_incorrect_package_name">Package name is incorrect (downloaded: %1$s, expected: %2$s)</string>
    <string name="download_md5sum_incorrect">MD5 sum is incorrect (downloaded: %1$s, expected: %2$s)</string>
    <string name="download_no_valid_apk">Downloaded file is not a valid APK (or incompatible)</string>
    <string name="download_no_versions">"The author hasn't uploaded anything yet"</string>
    <string name="download_progress">%1$,d / %2$,d kB</string>
    <string name="download_running">Download is running</string>
    <string name="download_section_24h">Last 24 hours</string>
    <string name="download_section_30d">Last 30 days</string>
    <string name="download_section_7d">Last 7 days</string>
    <string name="download_section_framework">EdXposed Framework</string>
    <string name="download_section_installed">Installed</string>
    <string name="download_section_not_installed">Not installed</string>
    <string name="download_section_older">More than 30 days ago</string>
    <string name="download_section_update_available">Update available</string>
    <string name="download_sorting_created">Sort by creation date</string>
    <string name="download_sorting_status">Sort by status</string>
    <string name="download_sorting_title">Sorting order</string>
    <string name="download_sorting_updated">Sort by last update</string>
    <string name="download_status_installed">Installed (version %s)</string>
    <string name="download_status_update_available">Update available (version %1$s → %2$s)</string>
    <string name="download_test_version_not_shown">"A test version is available, however it isn't shown due to your global or module-specific settings"</string>
    <string name="download_timestamps">Added on %1$s · Updated on %2$s</string>
    <string name="download_unknown_author">unknown author</string>
    <string name="download_view_cancel">Cancel</string>
    <string name="download_view_download">Download and Install</string>
    <string name="download_view_failed">Download failed (error %d)</string>
    <string name="download_view_install">Install</string>
    <string name="download_view_remove">Remove</string>
    <string name="enable_heads_up">Enable Heads-Up notification</string>
    <string name="enable_heads_up_summary">This option enables heads up notification on new/updated module</string>
    <string name="hook_modules">Force hook modules</string>
    <string name="hook_modules_summary">"Force add modules to white-list and remove from black list
Closing this option does not remove modules from white list
App list mode is required to enable"</string>
    <string name="ignore_chinese">Ignore Chinese characters</string>
    <string name="ignore_chinese_summary">"Hide Chinese modules from list
Modules are still available in search window
Enabling this option may result in slow performance"</string>
    <string name="ignore_updates">Ignore update</string>
    <string name="ignore_updates_summ">Ignore updates for a specific module</string>
    <string name="install_with_su">Silent installation (root)</string>
    <string name="install_with_su_summ">If checked EdXposed Manager will install modules without a prompt</string>
    <string name="notify_module_update">Enable module update notification</string>
    <string name="pass_safetynet">Pass SafetyNet</string>
    <string name="pass_safetynet_summary">"Force add GMS and GSF to black list and remove from white list
Closing this option does not remove modules from black list
App list mode is required to enable"</string>
    <string name="pref_black_white_list_summary">"After opening, you can set the list in \"Application\"
Black List mode: Selected app NOT to load EdXposed modules
Note: using app list mode might break system-wide modules' functions"</string>
    <string name="pref_compat_mode_summary">Compat mode app list</string>
    <string name="pref_compat_mode_title">Compat List</string>
    <string name="pref_disable_modules_log_summary">Exception stack thrown by the module will still be catched normally</string>
    <string name="pref_dynamic_modules_summary">When turned on, load latest activated module list on each app process started</string>
    <string name="pref_enable_boot_image_deopt_summary">"Turn on to make all framework methods hookable, but the whole system will be slowed down
Mainly used to check if one framework method is inlined when it can't be hooked into"</string>
    <string name="pref_title_black_white_list">App List mode</string>
    <string name="pref_title_disable_modules_log">Disable modules logs</string>
    <string name="pref_title_disable_verbose_log">Disable verbose logs</string>
    <string name="pref_title_dynamic_modules">Instant module list</string>
    <string name="pref_title_enable_boot_image_deopt">De-optimize boot image</string>
    <string name="save">Save only</string>
    <string name="settings_disable_resources">Disabled resource hooks</string>
    <string name="settings_disable_resources_summary">"Workaround for conflicts with theming engines
"<b>WARNING:</b> Modules which try to change resources will not work when this is enabled</string>
    <string name="settings_group_app">Application</string>
    <string name="settings_group_download">Download and install</string>
    <string name="settings_group_framework">Framework</string>
    <string name="settings_release_type">Versions to be shown</string>
    <string name="settings_theme">Theme</string>
    <string name="show_modules">Show modules and manager</string>
    <string name="show_modules_summary">"Show modules and manager in application list
This option does not remove checked application flag"</string>
    <string name="skip_xposedminversion_check">Skip status check</string>
    <string name="skip_xposedminversion_check_summ">Skip \"EdXposed Status\" check for modules</string>
    <string name="white_list_mode_summary">"White List mode: Only selected app load EdXposed modules
App list mode is required to enable"</string>
    <string name="white_list_mode_title">White List mode</string>
</resources>