<?xml version="1.0" encoding="utf-8"?>
<merge
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textAppearance="?android:textAppearanceSmall"
            android:layout_gravity="center_vertical"
            android:id="@id/txtInfo"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1.0" />
        <Button
            android:theme="@style/Widget.AppCompat.Button.Colored"
            android:id="@id/btnDownload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_view_download"
            android:layout_marginEnd="4.0dip"
            style="@style/Widget.MaterialComponents.Button" />
        <Button
            android:theme="@style/Widget.AppCompat.Button.Colored"
            android:id="@id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginEnd="4.0dip"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton" />
        <Button
            android:theme="@style/Widget.AppCompat.Button.Colored"
            android:id="@id/btnDownloadCancel"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_view_cancel"
            android:layout_marginEnd="4.0dip"
            style="@style/Widget.MaterialComponents.Button" />
        <Button
            android:theme="@style/Widget.AppCompat.Button.Colored"
            android:id="@id/btnRemove"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_view_remove"
            android:layout_marginEnd="4.0dip"
            style="@style/Widget.MaterialComponents.Button" />
        <Button
            android:theme="@style/Widget.AppCompat.Button.Colored"
            android:id="@id/btnInstall"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/download_view_install"
            android:layout_marginEnd="4.0dip"
            style="@style/Widget.MaterialComponents.Button" />
    </LinearLayout>
    <ProgressBar
        android:id="@id/progress"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="?android:progressBarStyleHorizontal" />
</merge>