<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:animateLayoutChanges="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:clipChildren="false"
        android:clipToPadding="false"
        android:layout_width="fill_parent"
        android:layout_height="72.0dip"
        android:layout_marginStart="32.0dip"
        android:layout_marginEnd="32.0dip">
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textSize="20.0sp"
            android:paddingRight="5.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_centerVertical="true"
            android:layout_marginStart="5.0dip"
            android:layout_toEndOf="@id/app_icon" />
        <ImageView
            android:id="@id/menu_more"
            android:background="?selectableItemBackgroundBorderless"
            android:padding="5.0dip"
            android:focusable="true"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            app:srcCompat="@drawable/ic_more" />
    </RelativeLayout>
    <com.google.android.material.card.MaterialCardView
        android:id="@id/activity_main_status"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:foreground="?android:selectableItemBackground"
        android:layout_marginStart="16.0dip"
        android:layout_marginEnd="16.0dip"
        app:cardBackgroundColor="#ff4caf50"
        app:cardCornerRadius="8.0dip"
        app:cardElevation="8.0dip">
        <RelativeLayout
            android:paddingTop="20.0dip"
            android:paddingBottom="20.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18.0dip"
            android:paddingEnd="18.0dip">
            <ImageView
                android:id="@id/activity_main_status_icon"
                android:layout_width="28.0dip"
                android:layout_height="28.0dip"
                android:src="@drawable/ic_check_circle"
                android:tint="@android:color/white"
                android:layout_centerVertical="true"
                android:contentDescription="@string/Activated" />
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@android:color/white"
                android:id="@id/activity_main_status_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Activated"
                android:layout_marginStart="25.0dip"
                android:layout_toEndOf="@id/activity_main_status_icon" />
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white"
                android:id="@id/activity_main_status_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5.0dip"
                android:text="@string/ActivatedDetail"
                android:layout_below="@id/activity_main_status_title"
                android:layout_alignStart="@id/activity_main_status_title" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@id/activity_main_modules"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:foreground="?android:selectableItemBackground"
        android:layout_marginStart="16.0dip"
        android:layout_marginEnd="16.0dip"
        app:cardCornerRadius="8.0dip">
        <RelativeLayout
            android:paddingTop="16.0dip"
            android:paddingBottom="16.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18.0dip"
            android:paddingEnd="18.0dip">
            <ImageView
                android:id="@id/activity_main_modules_icon"
                android:layout_width="28.0dip"
                android:layout_height="28.0dip"
                android:src="@drawable/ic_apps"
                android:layout_centerVertical="true"
                android:contentDescription="@string/Modules" />
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@id/activity_main_modules_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Modules"
                android:layout_marginStart="25.0dip"
                android:layout_toEndOf="@id/activity_main_modules_icon" />
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/darker_gray"
                android:id="@id/activity_main_modules_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.0dip"
                android:text="@string/ModulesDetail"
                android:layout_below="@id/activity_main_modules_title"
                android:layout_alignStart="@id/activity_main_modules_title" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <com.google.android.material.card.MaterialCardView
        android:id="@id/activity_main_downloads"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:foreground="?android:selectableItemBackground"
        android:layout_marginStart="16.0dip"
        android:layout_marginEnd="16.0dip"
        app:cardCornerRadius="8.0dip">
        <RelativeLayout
            android:paddingTop="16.0dip"
            android:paddingBottom="16.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingStart="18.0dip"
            android:paddingEnd="18.0dip">
            <ImageView
                android:id="@id/activity_main_downloads_icon"
                android:layout_width="28.0dip"
                android:layout_height="28.0dip"
                android:src="@drawable/ic_get_app"
                android:layout_centerVertical="true"
                android:contentDescription="@string/Downloads" />
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:id="@id/activity_main_downloads_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Downloads"
                android:layout_marginStart="25.0dip"
                android:layout_toEndOf="@id/activity_main_downloads_icon" />
            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/darker_gray"
                android:id="@id/activity_main_download_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2.0dip"
                android:text="@string/ModuleUpgradable"
                android:layout_below="@id/activity_main_downloads_title"
                android:layout_alignStart="@id/activity_main_downloads_title" />
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/activity_main_apps"
        android:background="?android:selectableItemBackground"
        android:padding="16.0dip"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dip"
        android:paddingStart="32.0dip"
        android:paddingEnd="32.0dip">
        <ImageView
            android:layout_width="25.0dip"
            android:layout_height="25.0dip"
            android:src="@drawable/outline_list_24"
            android:contentDescription="@string/Apps" />
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Apps"
            android:layout_marginStart="25.0dip" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/activity_main_logs"
        android:background="?android:selectableItemBackground"
        android:padding="16.0dip"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5.0dip"
        android:paddingStart="32.0dip"
        android:paddingEnd="32.0dip">
        <ImageView
            android:layout_width="25.0dip"
            android:layout_height="25.0dip"
            android:src="@drawable/ic_assignment"
            android:contentDescription="@string/Logs" />
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Logs"
            android:layout_marginStart="25.0dip" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/activity_main_settings"
        android:background="?android:selectableItemBackground"
        android:padding="16.0dip"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:paddingStart="32.0dip"
        android:paddingEnd="32.0dip">
        <ImageView
            android:layout_width="25.0dip"
            android:layout_height="25.0dip"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/Settings" />
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Settings"
            android:layout_marginStart="25.0dip" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@id/activity_main_about"
        android:background="?android:selectableItemBackground"
        android:padding="16.0dip"
        android:focusable="true"
        android:clickable="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10.0dip"
        android:paddingStart="32.0dip"
        android:paddingEnd="32.0dip">
        <ImageView
            android:layout_width="25.0dip"
            android:layout_height="25.0dip"
            android:src="@drawable/ic_info"
            android:contentDescription="@string/About" />
        <TextView
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/About"
            android:layout_marginStart="25.0dip" />
    </LinearLayout>
</LinearLayout>